--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "shopping-cart",
-   "homepage": "http://iamarif1.github.io/TypeScript-Shopping-Cart/",
+  "homepage": "http://iamarif1.github.io/TypeScript-Shopping-Cart",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -25,7 +25,7 @@
   "scripts": {
     "start": "react-scripts start",
     "predeploy": "npm run build",
-    "deploy": "gh-pages -d build",
+    "deploy": "gh-pages -b master -d build",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
